# dcu-ops-optimize

FP32gemm/: .gitignore  AGENTS.md  CMakeLists.txt  README.md  gemm_bf16_fp32.cpp  run_bench.py  summary.md
FP32gemm/benchmarks/: bench_gemm.py  bench_gemm_hip.py  bf16_fp32_gemm_opt.py  debug_gemv.py  debug_gemv2.py  gemm_final_bench.py  gemm_gemv_opt.py  gemm_gemv_opt2.py  gemm_opt_vfma.py  gemm_optimized.py  gemm_original_final.py  gemm_tuned.py  test_triton_dot.py
FP32gemm/docs/: bf16_fp32_gemm_dcu.md  dcu_gemm_expert_guide.md  dcu_optimization_techniques.md  dcu_programming_guide.md  mixed_precision_gemm_optimization.md
FP32gemm/kernels/: bench_precision_compare.cu  bench_rocblas.cu  bf16_fp32_gemm_dcu.cu  gemm_ABT_dispatch.cu  gemm_dispatch.cu  profile_ABT_64x64.cu  profile_v4_ABT.cu  verify_k64.cu
FP32gemm/kernels/isa/: v4_2col_opt.ISA  v6_sgpr.ISA
FP32gemm/warp/: .gitignore  README.md  setup.py  test_gate_bench.py  test_replay_dump.py  test_warp_gemm.py  warp_gemm.cu
